[gd_scene load_steps=17 format=3 uid="uid://b6yevt42pmf4n"]

[ext_resource type="Script" uid="uid://nttca11gblcf" path="res://scripts/interior_main.gd" id="1_5flai"]
[ext_resource type="Shader" uid="uid://bem81yi4kpofw" path="res://shaders/interior_background.gdshader" id="2_u0d3p"]
[ext_resource type="Script" uid="uid://dql3oyajd0ua4" path="res://scripts/room_builder.gd" id="3_d6ua1"]
[ext_resource type="Script" uid="uid://b3q5yfok6gndr" path="res://scripts/pink_panther.gd" id="4_umjme"]
[ext_resource type="Shader" uid="uid://daqx8cnu17bx4" path="res://shaders/painted_texture.gdshader" id="5_uj38w"]
[ext_resource type="Shader" uid="uid://cgppldmy0eaur" path="res://shaders/paper_grain.gdshader" id="6_mv2vf"]
[ext_resource type="Script" uid="uid://bg0bjo62ac45i" path="res://scripts/dialog_system.gd" id="7_0gxxm"]
[ext_resource type="AudioStream" uid="uid://b2ogfyp86bj0t" path="res://sounds/The Pink Panther's Passport to Peril OST #08 - Camp Chilly Wa-Wa (Day 2 & 3) [HQ].mp3" id="8_qefpf"]
[ext_resource type="Script" uid="uid://d3k83qqyygcsr" path="res://scripts/scene_transition.gd" id="9_7hcei"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("2_u0d3p")
shader_parameter/barrel_warp = 0.12
shader_parameter/wall_floor_split = 0.62
shader_parameter/wall_color_light = Color(0.36, 0.2, 0.1, 1)
shader_parameter/wall_color_dark = Color(0.22, 0.12, 0.06, 1)
shader_parameter/wall_color_deep = Color(0.1, 0.05, 0.02, 1)
shader_parameter/floor_color = Color(0.4, 0.25, 0.14, 1)
shader_parameter/floor_shadow = Color(0.2, 0.12, 0.06, 1)
shader_parameter/carpet_color = Color(0.1, 0.13, 0.27, 1)
shader_parameter/carpet_border = Color(0.06, 0.08, 0.17, 1)
shader_parameter/door_center = Vector2(0.5, 0.3)
shader_parameter/door_size = Vector2(0.24, 0.52)
shader_parameter/exterior_sky = Color(0.35, 0.66, 0.83, 1)
shader_parameter/exterior_grass = Color(0.23, 0.55, 0.17, 1)
shader_parameter/exterior_hills = Color(0.23, 0.42, 0.6, 1)
shader_parameter/door_frame_color = Color(0.55, 0.38, 0.2, 1)
shader_parameter/left_window_pos = Vector2(0.14, 0.28)
shader_parameter/left_window_size = Vector2(0.09, 0.14)
shader_parameter/right_window_pos = Vector2(0.84, 0.3)
shader_parameter/right_window_size = Vector2(0.09, 0.14)
shader_parameter/window_exterior = Color(0.29, 0.48, 0.22, 1)
shader_parameter/candle_pos = Vector2(0.22, 0.25)
shader_parameter/candle_intensity = 0.45
shader_parameter/door_light_intensity = 0.55
shader_parameter/vignette_strength = 0.55
shader_parameter/grain_scale = 80.0
shader_parameter/grain_intensity = 0.15
shader_parameter/plank_count = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_paint"]
shader = ExtResource("5_uj38w")
shader_parameter/brush_intensity = 0.18
shader_parameter/color_variation = 0.035
shader_parameter/edge_darkening = 0.22
shader_parameter/warmth = 0.035

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grain"]
shader = ExtResource("6_mv2vf")
shader_parameter/grain_intensity = 0.065
shader_parameter/grain_size = 1.2
shader_parameter/fiber_intensity = 0.035
shader_parameter/paper_tint = Color(1, 0.95, 0.88, 1)
shader_parameter/time_flicker = 0.2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialog"]
bg_color = Color(0.18, 0.12, 0.08, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.75, 0.58, 0.22, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_portrait"]
bg_color = Color(0.5, 0.5, 0.5, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.48, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_speaker"]
font_size = 20
font_color = Color(1, 0.9, 0.5, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 18
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Interior" type="Node2D"]
script = ExtResource("1_5flai")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bg")
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2

[node name="RoomElements" type="Node2D" parent="."]
script = ExtResource("3_d6ua1")

[node name="PinkPanther" type="Node2D" parent="."]
z_index = 10
position = Vector2(480, 430)
scale = Vector2(0.55, 0.55)
script = ExtResource("4_umjme")
street_y = 430.0
min_x = 80.0
max_x = 880.0

[node name="Shadow" type="Polygon2D" parent="PinkPanther"]
modulate = Color(0.15, 0.08, 0.02, 0.3)
position = Vector2(0, 95)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-26, -5, -16, -10, 16, -10, 26, -5, 26, 5, 16, 10, -16, 10, -26, 5)

[node name="Body" type="Polygon2D" parent="PinkPanther"]
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-12, -48, -11, -72, -9, -96, -7, -114, 0, -122, 7, -114, 9, -96, 11, -72, 12, -48, 12, -10, 10, 10, 9, 25, 7, 34, 0, 42, -7, 34, -9, 25, -10, 10, -12, -10)

[node name="BodyOutline" type="Line2D" parent="PinkPanther/Body"]
points = PackedVector2Array(-12, -48, -11, -72, -9, -96, -7, -114, 0, -122, 7, -114, 9, -96, 11, -72, 12, -48, 12, -10, 10, 10, 9, 25, 7, 34, 0, 42, -7, 34, -9, 25, -10, 10, -12, -10, -12, -48)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Chest" type="Polygon2D" parent="PinkPanther/Body"]
color = Color(1, 0.55, 0.78, 1)
polygon = PackedVector2Array(-6, -42, -5, -64, 0, -72, 5, -64, 6, -42, 6, -8, 5, 8, 0, 12, -5, 8, -6, -8)

[node name="Neck" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(0, -122)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-5, 5, -6, -16, -5, -42, -4, -62, 0, -72, 4, -62, 5, -42, 6, -16, 5, 5)

[node name="NeckOutline" type="Line2D" parent="PinkPanther/Body/Neck"]
points = PackedVector2Array(-5, 5, -6, -16, -5, -42, -4, -62, 0, -72, 4, -62, 5, -42, 6, -16, 5, 5)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Head" type="Polygon2D" parent="PinkPanther/Body/Neck"]
position = Vector2(0, -72)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-20, 12, -22, 0, -22, -16, -19, -30, -12, -42, 0, -46, 12, -42, 19, -30, 22, -16, 22, 0, 20, 12, 10, 16, 0, 14, -10, 16)

[node name="HeadOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head"]
points = PackedVector2Array(-20, 12, -22, 0, -22, -16, -19, -30, -12, -42, 0, -46, 12, -42, 19, -30, 22, -16, 22, 0, 20, 12, 10, 16, 0, 14, -10, 16, -20, 12)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Snout" type="Polygon2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(0, 14)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-10, -9, -9, -14, 9, -14, 10, -9, 12, 5, 10, 20, 6, 32, 0, 36, -6, 32, -10, 20, -12, 5)

[node name="SnoutOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(-10, -9, -9, -14, 9, -14, 10, -9, 12, 5, 10, 20, 6, 32, 0, 36, -6, 32, -10, 20, -12, 5, -10, -9)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="SnoutHighlight" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/Snout"]
color = Color(1, 0.65, 0.85, 1)
polygon = PackedVector2Array(-5, -5, 5, -5, 7, 5, 4, 16, 0, 20, -4, 16, -7, 5)

[node name="Nose" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/Snout"]
position = Vector2(0, 32)
color = Color(0.05, 0.05, 0.05, 1)
polygon = PackedVector2Array(-5, -4, 0, -6, 5, -4, 6, 0, 4, 4, 0, 5, -4, 4, -6, 0)

[node name="NoseShine" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/Snout/Nose"]
position = Vector2(-2, -2)
color = Color(0.35, 0.35, 0.35, 1)
polygon = PackedVector2Array(-1.5, -1.5, 1.5, -1.5, 1.5, 1.5, -1.5, 1.5)

[node name="Mouth" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
position = Vector2(0, 22)
points = PackedVector2Array(-5, -1, -3, 3, 0, 4, 3, 3, 5, -1, 8, -3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="LeftWhisker1" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(-10, 7, -22, 3, -34, 1)
width = 1.8
default_color = Color(0, 0, 0, 1)

[node name="LeftWhisker2" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(-10, 12, -24, 12, -36, 10)
width = 1.8
default_color = Color(0, 0, 0, 1)

[node name="LeftWhisker3" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(-10, 17, -22, 20, -32, 22)
width = 1.5
default_color = Color(0, 0, 0, 1)

[node name="RightWhisker1" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(10, 7, 22, 3, 34, 1)
width = 1.8
default_color = Color(0, 0, 0, 1)

[node name="RightWhisker2" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(10, 12, 24, 12, 36, 10)
width = 1.8
default_color = Color(0, 0, 0, 1)

[node name="RightWhisker3" type="Line2D" parent="PinkPanther/Body/Neck/Head/Snout"]
points = PackedVector2Array(10, 17, 22, 20, 32, 22)
width = 1.5
default_color = Color(0, 0, 0, 1)

[node name="LeftEye" type="Polygon2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(-10, -20)
color = Color(1, 0.92, 0.3, 1)
polygon = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 7, 5, 5, 10, 0, 12, -5, 10, -7, 5)

[node name="EyeOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head/LeftEye"]
points = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 7, 5, 5, 10, 0, 12, -5, 10, -7, 5, -7, -4)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="Pupil" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/LeftEye"]
position = Vector2(1, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-4, -3, -2, -5, 2, -5, 4, -3, 4, 3, 2, 5, -2, 5, -4, 3)

[node name="Glint" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/LeftEye/Pupil"]
position = Vector2(-1, -1)
polygon = PackedVector2Array(-1.5, -1.5, 1.5, -1.5, 1.5, 1.5, -1.5, 1.5)

[node name="LeftEyelid" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/LeftEye"]
z_index = 1
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 4, -2, 0, -3, -4, -2)

[node name="LeftEyelidLine" type="Line2D" parent="PinkPanther/Body/Neck/Head/LeftEye/LeftEyelid"]
points = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="RightEye" type="Polygon2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(10, -20)
color = Color(1, 0.92, 0.3, 1)
polygon = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 7, 5, 5, 10, 0, 12, -5, 10, -7, 5)

[node name="EyeOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head/RightEye"]
points = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 7, 5, 5, 10, 0, 12, -5, 10, -7, 5, -7, -4)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="Pupil" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/RightEye"]
position = Vector2(1, 1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-4, -3, -2, -5, 2, -5, 4, -3, 4, 3, 2, 5, -2, 5, -4, 3)

[node name="Glint" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/RightEye/Pupil"]
position = Vector2(-1, -1)
polygon = PackedVector2Array(-1.5, -1.5, 1.5, -1.5, 1.5, 1.5, -1.5, 1.5)

[node name="RightEyelid" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/RightEye"]
z_index = 1
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4, 4, -2, 0, -3, -4, -2)

[node name="RightEyelidLine" type="Line2D" parent="PinkPanther/Body/Neck/Head/RightEye/RightEyelid"]
points = PackedVector2Array(-7, -4, -6, -10, 0, -12, 6, -10, 7, -4)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="LeftEyebrow" type="Line2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(-10, -34)
points = PackedVector2Array(-8, 3, -4, 0, 4, 0, 8, 2)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="RightEyebrow" type="Line2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(10, -34)
points = PackedVector2Array(-8, 2, -4, 0, 4, 0, 8, 3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="LeftEar" type="Polygon2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(-15, -38)
rotation = -0.2
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-6, 5, -8, -8, -5, -24, 0, -30, 5, -24, 8, -8, 6, 5)

[node name="EarOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head/LeftEar"]
points = PackedVector2Array(-6, 5, -8, -8, -5, -24, 0, -30, 5, -24, 8, -8, 6, 5)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="InnerEar" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/LeftEar"]
color = Color(0.85, 0.35, 0.55, 1)
polygon = PackedVector2Array(-3, 2, -4, -5, -3, -16, 0, -20, 3, -16, 4, -5, 3, 2)

[node name="RightEar" type="Polygon2D" parent="PinkPanther/Body/Neck/Head"]
position = Vector2(15, -38)
rotation = 0.2
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-6, 5, -8, -8, -5, -24, 0, -30, 5, -24, 8, -8, 6, 5)

[node name="EarOutline" type="Line2D" parent="PinkPanther/Body/Neck/Head/RightEar"]
points = PackedVector2Array(-6, 5, -8, -8, -5, -24, 0, -30, 5, -24, 8, -8, 6, 5)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="InnerEar" type="Polygon2D" parent="PinkPanther/Body/Neck/Head/RightEar"]
color = Color(0.85, 0.35, 0.55, 1)
polygon = PackedVector2Array(-3, 2, -4, -5, -3, -16, 0, -20, 3, -16, 4, -5, 3, 2)

[node name="Tail" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(-9, 32)
rotation = -0.55
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 6, -5, -25, -5, -60, -4, -95, -3, -122, 0, -135, 3, -122, 4, -95, 5, -60, 5, -25, 4, 6)

[node name="TailOutline" type="Line2D" parent="PinkPanther/Body/Tail"]
points = PackedVector2Array(-4, 6, -5, -25, -5, -60, -4, -95, -3, -122, 0, -135, 3, -122, 4, -95, 5, -60, 5, -25, 4, 6)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="TailTip" type="Polygon2D" parent="PinkPanther/Body/Tail"]
position = Vector2(0, -133)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 5, -5, -5, -3, -14, 0, -18, 3, -14, 5, -5, 4, 5)

[node name="TailTipOutline" type="Line2D" parent="PinkPanther/Body/Tail/TailTip"]
points = PackedVector2Array(-4, 5, -5, -5, -3, -14, 0, -18, 3, -14, 5, -5, 4, 5)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="LeftArm" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(-11, -102)
rotation = 0.1
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 0, -5, 30, -5, 65, -4, 98, 0, 108, 4, 98, 5, 65, 4, 30, 4, 0)

[node name="ArmOutline" type="Line2D" parent="PinkPanther/Body/LeftArm"]
points = PackedVector2Array(-4, 0, -5, 30, -5, 65, -4, 98, 0, 108, 4, 98, 5, 65, 4, 30, 4, 0)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Hand" type="Polygon2D" parent="PinkPanther/Body/LeftArm"]
position = Vector2(0, 108)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-5, -3, -6, 3, -4, 9, 0, 11, 4, 9, 6, 3, 5, -3)

[node name="HandOutline" type="Line2D" parent="PinkPanther/Body/LeftArm/Hand"]
points = PackedVector2Array(-5, -3, -6, 3, -4, 9, 0, 11, 4, 9, 6, 3, 5, -3, -5, -3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="RightArm" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(11, -102)
rotation = -0.1
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 0, -4, 30, -5, 65, -4, 98, 0, 108, 4, 98, 5, 65, 5, 30, 4, 0)

[node name="ArmOutline" type="Line2D" parent="PinkPanther/Body/RightArm"]
points = PackedVector2Array(-4, 0, -4, 30, -5, 65, -4, 98, 0, 108, 4, 98, 5, 65, 5, 30, 4, 0)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Hand" type="Polygon2D" parent="PinkPanther/Body/RightArm"]
position = Vector2(0, 108)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-5, -3, -6, 3, -4, 9, 0, 11, 4, 9, 6, 3, 5, -3)

[node name="HandOutline" type="Line2D" parent="PinkPanther/Body/RightArm/Hand"]
points = PackedVector2Array(-5, -3, -6, 3, -4, 9, 0, 11, 4, 9, 6, 3, 5, -3, -5, -3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="LeftLeg" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(-6, 40)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 0, -5, 24, -5, 54, -4, 76, 0, 82, 4, 76, 5, 54, 4, 24, 4, 0)

[node name="LegOutline" type="Line2D" parent="PinkPanther/Body/LeftLeg"]
points = PackedVector2Array(-4, 0, -5, 24, -5, 54, -4, 76, 0, 82, 4, 76, 5, 54, 4, 24, 4, 0)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Foot" type="Polygon2D" parent="PinkPanther/Body/LeftLeg"]
position = Vector2(0, 82)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-6, -3, -8, 2, -6, 7, -3, 9, 10, 9, 15, 5, 15, 0, 10, -3)

[node name="FootOutline" type="Line2D" parent="PinkPanther/Body/LeftLeg/Foot"]
points = PackedVector2Array(-6, -3, -8, 2, -6, 7, -3, 9, 10, 9, 15, 5, 15, 0, 10, -3, -6, -3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="RightLeg" type="Polygon2D" parent="PinkPanther/Body"]
position = Vector2(6, 40)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-4, 0, -4, 24, -5, 54, -4, 76, 0, 82, 4, 76, 5, 54, 5, 24, 4, 0)

[node name="LegOutline" type="Line2D" parent="PinkPanther/Body/RightLeg"]
points = PackedVector2Array(-4, 0, -4, 24, -5, 54, -4, 76, 0, 82, 4, 76, 5, 54, 5, 24, 4, 0)
width = 3.5
default_color = Color(0, 0, 0, 1)

[node name="Foot" type="Polygon2D" parent="PinkPanther/Body/RightLeg"]
position = Vector2(0, 82)
color = Color(1, 0.42, 0.71, 1)
polygon = PackedVector2Array(-6, -3, -8, 2, -6, 7, -3, 9, 10, 9, 15, 5, 15, 0, 10, -3)

[node name="FootOutline" type="Line2D" parent="PinkPanther/Body/RightLeg/Foot"]
points = PackedVector2Array(-6, -3, -8, 2, -6, 7, -3, 9, 10, 9, 15, 5, 15, 0, 10, -3, -6, -3)
width = 2.5
default_color = Color(0, 0, 0, 1)

[node name="PaintedOverlay" type="CanvasLayer" parent="."]
layer = 5

[node name="Overlay" type="ColorRect" parent="PaintedOverlay"]
material = SubResource("ShaderMaterial_paint")
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2

[node name="GrainOverlay" type="CanvasLayer" parent="."]
layer = 6

[node name="Overlay" type="ColorRect" parent="GrainOverlay"]
material = SubResource("ShaderMaterial_grain")
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2

[node name="DialogSystem" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("7_0gxxm")

[node name="DialogPanel" type="Panel" parent="DialogSystem"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -140.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dialog")

[node name="PortraitPanel" type="Panel" parent="DialogSystem/DialogPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 95.0
offset_bottom = 95.0
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait")

[node name="SpeakerLabel" type="Label" parent="DialogSystem/DialogPanel"]
layout_mode = 0
offset_left = 110.0
offset_top = 10.0
offset_right = 900.0
offset_bottom = 35.0
text = "Speaker Name"
label_settings = SubResource("LabelSettings_speaker")

[node name="DialogText" type="RichTextLabel" parent="DialogSystem/DialogPanel"]
layout_mode = 0
offset_left = 110.0
offset_top = 40.0
offset_right = 900.0
offset_bottom = 110.0
text = "Dialog text goes here..."

[node name="ContinueIndicator" type="Label" parent="DialogSystem/DialogPanel"]
visible = false
layout_mode = 0
offset_left = 850.0
offset_top = 85.0
offset_right = 905.0
offset_bottom = 110.0
text = ">>>"
horizontal_alignment = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 12.0
offset_right = 940.0
offset_bottom = 40.0
text = "Click to walk | Click objects to interact | Click door to exit"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qefpf")
volume_db = -8.0
autoplay = true

[node name="SceneTransition" type="CanvasLayer" parent="."]
layer = 100
script = ExtResource("9_7hcei")

[node name="FadeRect" type="ColorRect" parent="SceneTransition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="LocationLabel" type="Label" parent="SceneTransition"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1
